[package]
name = "rust_lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8"

[[bin]]
name="demo-1"
path="src/bin/demo_1.rs"

[[bin]]
name="demo-2"
path="src/bin/demo_2.rs"

[[bin]]
name="demo-3"
path="src/bin/demo_3.rs"

[[bin]]
name="demo-4"
path="src/bin/demo_4.rs"

[[bin]]
name="demo_iteration"
path="src/bin/demo_iteration.rs"

[[bin]]
name="graph-lab"
path="src/bin/graph_lab.rs"

[[bin]]
name="matrix_multiplication"
path="src/bin/matrix_multiplication.rs"

[[bin]]
name="matrix_multiplication_simple"
path="src/bin/matrix_multiplication_simple.rs"

[[bin]]
name="matrix_multiplication_multithreaded"
path="src/bin/matrix_multiplication_multithreaded.rs"

[[bin]]
name="actor_system_attemp_2"
path="src/bin/send_dyanmic_trait_through_channel.rs"

[[bin]]
name="max_flow"
path="src/bin/max_flow.rs"