[package]
name = "rust_lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rand="0.8"
libm="0.2.8"
memmap2="0.9.4"
arrow="52.1.0"
log="0.4.22"
log4rs="1.3.0"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
nalgebra = "*"
conv = "*"
chrono = "0.4.38"
uuid = {version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"]}

[[bin]]
name="demo-1"
path="src/bin/demo_1.rs"

[[bin]]
name="demo-2"
path="src/bin/demo_2.rs"

[[bin]]
name="demo-3"
path="src/bin/demo_3.rs"

[[bin]]
name="demo-4"
path="src/bin/demo_4.rs"

[[bin]]
name="demo_iteration"
path="src/bin/demo_iteration.rs"

[[bin]]
name="graph-lab"
path="src/bin/graph_lab.rs"

[[bin]]
name="matrix_multiplication"
path="src/bin/matrix_multiplication.rs"

[[bin]]
name="matrix_multiplication_simple"
path="src/bin/matrix_multiplication_simple.rs"

[[bin]]
name="matrix_multiplication_multithreaded"
path="src/bin/matrix_multiplication_multithreaded.rs"

[[bin]]
name="actor_system_attemp_2"
path="src/bin/send_dyanmic_trait_through_channel.rs"

[[bin]]
name="max_flow"
path="src/bin/max_flow.rs"

[[bin]]
name="multiplicative_weights_update"
path="src/bin/multiplicative_weights_update_algo.rs"

[[bin]]
name="leetcode_test1"
path="src/bin/leetcode/test1.rs"

[[bin]]
name="mmp_examples_1"
path="src/bin/mmp_examples/mmp_example_1.rs"

[[bin]]
name="log_demo"
path="src/bin/log_demo.rs"

[[bin]]
name="demo_json"
path="src/bin/serde/demo_json.rs"

[[bin]]
name="demo_customization"
path="src/bin/serde/demo_customization.rs"


[[bin]]
name="demo_customization_serialization_map"
path="src/bin/serde/demo_customization_serialization_map.rs"

[[bin]]
name="demo_customization_serialization_struct"
path="src/bin/serde/demo_customization_serialization_struct.rs"

[[bin]]
name="demo_customization_deserialization"
path="src/bin/serde/demo_customization_deserialization.rs"

[[bin]]
name="gradient_descent"
path="src/bin/gradient_descent/basic_implementation.rs"

[[bin]]
name="function_wrapper"
path="src/bin/gradient_descent/function_wrapper.rs"

[[bin]]
name="clean_python"
path="src/bin/python_code_clearning.rs"

[[bin]]
name="auto_diff"
path="src/bin/gradient_descent/auto_diff.rs"

[[bin]]
name="finance_bond"
path="src/bin/financial_models/bonds.rs"

[[bin]]
name="nelder_mead_algo"
path="src/bin/optimization/nelder_mead_algo.rs"

[[bin]]
name="powell_algo"
path="src/bin/optimization/powell_algo.rs"

[[bin]]
name="hnsw"
path="src/bin/hierarchical_nagigable_small_world.rs"


[[bin]]
name = "worker_queue"
path="src/bin/worker_queue_version_1.rs"